--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.LevelUpMobile" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <!-- Base application theme -->
+    <style name="Base.Theme.LevelUpMobile" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Customize colors -->
     </style>
 
     <style name="Theme.LevelUpMobile" parent="Base.Theme.LevelUpMobile" />
