--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme -->
-    <style name="Base.Theme.LevelUpMobile" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize colors -->
+<resources>
+    <!-- Tema mínimo válido para Compose -->
+    <style name="Theme.LevelUp" parent="android:Theme.Light.NoTitleBar">
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="Theme.LevelUpMobile" parent="Base.Theme.LevelUpMobile" />
 </resources>
